--- a/FotosVideos.html
+++ b/FotosVideos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotos e Videos</title>
-    <link rel="stylesheet" href="css/FotosVideos.css"
+    <link rel="stylesheet" href="CSS/FotosVideos.css"
 </head>
     <header>
         <div class="logo">
