--- a/atividades.html
+++ b/atividades.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividades</title>
-    <link rel="stylesheet" href="css/atividades.css"
+    <link rel="stylesheet" href="CSS/atividades.css"
 </head>
 <header>
     <div class="logo">
