--- a/dados.html
+++ b/dados.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dados de Mallet</title>
-    <link rel="stylesheet" href="css/dados.css"
+    <link rel="stylesheet" href="CSS/dados.css"
 </head>
     <header>
             <div class="logo">
